versions/GNDS-v2.0/GNDS/c/src/v2.0/general/Regions2d.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// Regions2d is the basic handle type in this file. Example:
//    // Create a default Regions2d object:
//    Regions2d handle = Regions2dDefault();
// Functions involving Regions2d are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_GNDS_V2_0_GENERAL_REGIONS2D
#define C_INTERFACE_GNDS_V2_0_GENERAL_REGIONS2D

#include "GNDStk.h"
#include "v2.0/general/Axes.h"
#include "v2.0/general/Function2ds.h"
#include "v2.0/general/Uncertainty.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct Regions2dClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Regions2d
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct Regions2dClass *Regions2d;

// --- Const-aware handles.
typedef const struct Regions2dClass *const ConstHandle2ConstRegions2d;
typedef       struct Regions2dClass *const ConstHandle2Regions2d;
typedef const struct Regions2dClass *      Handle2ConstRegions2d;
typedef       struct Regions2dClass *      Handle2Regions2d;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstRegions2d
Regions2dDefaultConst();

// +++ Create, default
extern_c Handle2Regions2d
Regions2dDefault();

// --- Create, general, const
extern_c Handle2ConstRegions2d
Regions2dCreateConst(
   ConstHandle2ConstAxes axes,
   ConstHandle2ConstFunction2ds function2ds,
   ConstHandle2ConstUncertainty uncertainty
);

// +++ Create, general
extern_c Handle2Regions2d
Regions2dCreate(
   ConstHandle2ConstAxes axes,
   ConstHandle2ConstFunction2ds function2ds,
   ConstHandle2ConstUncertainty uncertainty
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
Regions2dAssign(ConstHandle2Regions2d self, ConstHandle2ConstRegions2d from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
Regions2dDelete(ConstHandle2ConstRegions2d self);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
Regions2dRead(ConstHandle2Regions2d self, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
Regions2dWrite(ConstHandle2ConstRegions2d self, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
Regions2dPrint(ConstHandle2ConstRegions2d self);

// +++ Print to standard output, as XML
extern_c int
Regions2dPrintXML(ConstHandle2ConstRegions2d self);

// +++ Print to standard output, as JSON
extern_c int
Regions2dPrintJSON(ConstHandle2ConstRegions2d self);


// -----------------------------------------------------------------------------
// Child: axes
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
Regions2dAxesHas(ConstHandle2ConstRegions2d self);

// --- Get, const
extern_c Handle2ConstAxes
Regions2dAxesGetConst(ConstHandle2ConstRegions2d self);

// +++ Get
extern_c Handle2Axes
Regions2dAxesGet(ConstHandle2Regions2d self);

// +++ Set
extern_c void
Regions2dAxesSet(ConstHandle2Regions2d self, ConstHandle2ConstAxes axes);


// -----------------------------------------------------------------------------
// Child: function2ds
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
Regions2dFunction2dsHas(ConstHandle2ConstRegions2d self);

// --- Get, const
extern_c Handle2ConstFunction2ds
Regions2dFunction2dsGetConst(ConstHandle2ConstRegions2d self);

// +++ Get
extern_c Handle2Function2ds
Regions2dFunction2dsGet(ConstHandle2Regions2d self);

// +++ Set
extern_c void
Regions2dFunction2dsSet(ConstHandle2Regions2d self, ConstHandle2ConstFunction2ds function2ds);


// -----------------------------------------------------------------------------
// Child: uncertainty
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
Regions2dUncertaintyHas(ConstHandle2ConstRegions2d self);

// --- Get, const
extern_c Handle2ConstUncertainty
Regions2dUncertaintyGetConst(ConstHandle2ConstRegions2d self);

// +++ Get
extern_c Handle2Uncertainty
Regions2dUncertaintyGet(ConstHandle2Regions2d self);

// +++ Set
extern_c void
Regions2dUncertaintySet(ConstHandle2Regions2d self, ConstHandle2ConstUncertainty uncertainty);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/general/Regions2d/src/custom.h"

#undef extern_c
#endif